overflow temp fix

--- a/stylesheets/scss/application.scss
+++ b/stylesheets/scss/application.scss
@@ -268,6 +268,7 @@ h2 {
 #habla_middle_wrapper_div {
   height: calc( 100% - 100px );
   padding-left: 20px;
+  overflow: scroll !important;
 } 
 
 #habla_wcsend_input {
